Ajout armure: Tactical et Agent