@@ -21,22 +21,22 @@ import net.minecraft.client.model.HumanoidModel;
 import net.minecraft.client.Minecraft;
 
 import net.mcreator.woncore.init.WoncoreModTabs;
-import net.mcreator.woncore.client.model.Modelfuturiste_armor;
+import net.mcreator.woncore.client.model.ModelTactical_Armor;
 
 import java.util.Map;
 import java.util.Collections;
 
-public abstract class FuturisteArmorItem extends ArmorItem {
-	public FuturisteArmorItem(EquipmentSlot slot, Item.Properties properties) {
+public abstract class TacticalArmorItem extends ArmorItem {
+	public TacticalArmorItem(EquipmentSlot slot, Item.Properties properties) {
 		super(new ArmorMaterial() {
 			@Override
 			public int getDurabilityForSlot(EquipmentSlot slot) {
-				return new int[]{13, 15, 16, 11}[slot.getIndex()] * 45;
+				return new int[]{13, 15, 16, 11}[slot.getIndex()] * 40;
 			}
 
 			@Override
 			public int getDefenseForSlot(EquipmentSlot slot) {
-				return new int[]{4, 6, 8, 4}[slot.getIndex()];
+				return new int[]{2, 5, 6, 3}[slot.getIndex()];
 			}
 
 			@Override
@@ -56,7 +56,7 @@ public abstract class FuturisteArmorItem extends ArmorItem {
 
 			@Override
 			public String getName() {
-				return "futuriste_armor";
+				return "tactical_armor";
 			}
 
 			@Override
@@ -66,14 +66,14 @@ public abstract class FuturisteArmorItem extends ArmorItem {
 
 			@Override
 			public float getKnockbackResistance() {
-				return 0.2f;
+				return 0f;
 			}
 		}, slot, properties);
 	}
 
-	public static class Helmet extends FuturisteArmorItem {
+	public static class Helmet extends TacticalArmorItem {
 		public Helmet() {
-			super(EquipmentSlot.HEAD, new Item.Properties().tab(WoncoreModTabs.TAB_COMBAT).fireResistant());
+			super(EquipmentSlot.HEAD, new Item.Properties().tab(WoncoreModTabs.TAB_COMBAT));
 		}
 
 		public void initializeClient(java.util.function.Consumer<net.minecraftforge.client.IItemRenderProperties> consumer) {
@@ -81,7 +81,7 @@ public abstract class FuturisteArmorItem extends ArmorItem {
 				@Override
 				public HumanoidModel getArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
 					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
-							Map.of("head", new Modelfuturiste_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelfuturiste_armor.LAYER_LOCATION)).Head, "hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body",
+							Map.of("head", new ModelTactical_Armor(Minecraft.getInstance().getEntityModels().bakeLayer(ModelTactical_Armor.LAYER_LOCATION)).armorHead, "hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body",
 									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_arm",
 									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg",
 									new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
@@ -95,13 +95,13 @@ public abstract class FuturisteArmorItem extends ArmorItem {
 
 		@Override
 		public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
-			return "woncore:textures/entities/futuriste_armor_texture.png";
+			return "woncore:textures/entities/tactical_armor_texture.png";
 		}
 	}
 
-	public static class Chestplate extends FuturisteArmorItem {
+	public static class Chestplate extends TacticalArmorItem {
 		public Chestplate() {
-			super(EquipmentSlot.CHEST, new Item.Properties().tab(WoncoreModTabs.TAB_COMBAT).fireResistant());
+			super(EquipmentSlot.CHEST, new Item.Properties().tab(WoncoreModTabs.TAB_COMBAT));
 		}
 
 		public void initializeClient(java.util.function.Consumer<net.minecraftforge.client.IItemRenderProperties> consumer) {
@@ -109,9 +109,9 @@ public abstract class FuturisteArmorItem extends ArmorItem {
 				@Override
 				@OnlyIn(Dist.CLIENT)
 				public HumanoidModel getArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
-					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(), Map.of("body", new Modelfuturiste_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelfuturiste_armor.LAYER_LOCATION)).Body,
-							"left_arm", new Modelfuturiste_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelfuturiste_armor.LAYER_LOCATION)).LeftArm, "right_arm",
-							new Modelfuturiste_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelfuturiste_armor.LAYER_LOCATION)).RighArm, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(), Map.of("body", new ModelTactical_Armor(Minecraft.getInstance().getEntityModels().bakeLayer(ModelTactical_Armor.LAYER_LOCATION)).armorBody,
+							"left_arm", new ModelTactical_Armor(Minecraft.getInstance().getEntityModels().bakeLayer(ModelTactical_Armor.LAYER_LOCATION)).armorLeftArm, "right_arm",
+							new ModelTactical_Armor(Minecraft.getInstance().getEntityModels().bakeLayer(ModelTactical_Armor.LAYER_LOCATION)).armorRightArm, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
 							new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
 					armorModel.crouching = living.isShiftKeyDown();
 					armorModel.riding = defaultModel.riding;
@@ -123,13 +123,13 @@ public abstract class FuturisteArmorItem extends ArmorItem {
 
 		@Override
 		public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
-			return "woncore:textures/entities/futuriste_armor_texture.png";
+			return "woncore:textures/entities/tactical_armor_texture.png";
 		}
 	}
 
-	public static class Leggings extends FuturisteArmorItem {
+	public static class Leggings extends TacticalArmorItem {
 		public Leggings() {
-			super(EquipmentSlot.LEGS, new Item.Properties().tab(WoncoreModTabs.TAB_COMBAT).fireResistant());
+			super(EquipmentSlot.LEGS, new Item.Properties().tab(WoncoreModTabs.TAB_COMBAT));
 		}
 
 		public void initializeClient(java.util.function.Consumer<net.minecraftforge.client.IItemRenderProperties> consumer) {
@@ -138,8 +138,8 @@ public abstract class FuturisteArmorItem extends ArmorItem {
 				@OnlyIn(Dist.CLIENT)
 				public HumanoidModel getArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
 					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
-							Map.of("left_leg", new Modelfuturiste_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelfuturiste_armor.LAYER_LOCATION)).LeftLeg, "right_leg",
-									new Modelfuturiste_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelfuturiste_armor.LAYER_LOCATION)).RightLeg, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+							Map.of("left_leg", new ModelTactical_Armor(Minecraft.getInstance().getEntityModels().bakeLayer(ModelTactical_Armor.LAYER_LOCATION)).armorLeftLeg, "right_leg",
+									new ModelTactical_Armor(Minecraft.getInstance().getEntityModels().bakeLayer(ModelTactical_Armor.LAYER_LOCATION)).armorRightLeg, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
 									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
 									"left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
 					armorModel.crouching = living.isShiftKeyDown();
@@ -152,13 +152,13 @@ public abstract class FuturisteArmorItem extends ArmorItem {
 
 		@Override
 		public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
-			return "woncore:textures/entities/futuriste_armor_texture.png";
+			return "woncore:textures/entities/tactical_armor_texture.png";
 		}
 	}
 
-	public static class Boots extends FuturisteArmorItem {
+	public static class Boots extends TacticalArmorItem {
 		public Boots() {
-			super(EquipmentSlot.FEET, new Item.Properties().tab(WoncoreModTabs.TAB_COMBAT).fireResistant());
+			super(EquipmentSlot.FEET, new Item.Properties().tab(WoncoreModTabs.TAB_COMBAT));
 		}
 
 		public void initializeClient(java.util.function.Consumer<net.minecraftforge.client.IItemRenderProperties> consumer) {
@@ -167,8 +167,8 @@ public abstract class FuturisteArmorItem extends ArmorItem {
 				@OnlyIn(Dist.CLIENT)
 				public HumanoidModel getArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
 					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
-							Map.of("left_leg", new Modelfuturiste_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelfuturiste_armor.LAYER_LOCATION)).Leftboots, "right_leg",
-									new Modelfuturiste_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelfuturiste_armor.LAYER_LOCATION)).RightBoots, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+							Map.of("left_leg", new ModelTactical_Armor(Minecraft.getInstance().getEntityModels().bakeLayer(ModelTactical_Armor.LAYER_LOCATION)).armorLeftBoot, "right_leg",
+									new ModelTactical_Armor(Minecraft.getInstance().getEntityModels().bakeLayer(ModelTactical_Armor.LAYER_LOCATION)).armorRightBoot, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
 									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
 									"left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
 					armorModel.crouching = living.isShiftKeyDown();
@@ -181,7 +181,7 @@ public abstract class FuturisteArmorItem extends ArmorItem {
 
 		@Override
 		public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
-			return "woncore:textures/entities/futuriste_armor_texture.png";
+			return "woncore:textures/entities/tactical_armor_texture.png";
 		}
 	}
 }
